# clumsy

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/fs/: inmem.rs  mac.rs  mod.rs
src/index/: diff.rs  mod.rs
src/object/: blob.rs  commit.rs  mod.rs  tree.rs
