[package]
name = "clumsy"
version = "0.1.0"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1.0.2"
sha-1 = { version = "0.9.1", default-features = true }
chrono = "0.4.15"
hex = "0.4.2"
itertools = "0.9.0"
