[package]
name = "clumsy"
version = "0.1.2"
authors = ["uzimaru0000 <shuji365630@gmail.com>"]
edition = "2018"

[features]
json = ["serde", "chrono/serde"]

[dependencies]
libflate = "1.0.2"
sha-1 = { version = "0.9.1", default-features = true }
chrono = { version = "0.4.15", features = ["serde"] }
hex = "0.4.2"
serde = { version = "1.0.116", features = ["derive"], optional = true }
